// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPageIndicator should render correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-page-indicator"
    >
      <div
        class="bpk-page-indicator__container"
      >
        <div
          class="bpk-page-indicator__indicators-container"
        >
          <button
            aria-current="true"
            aria-label="Go to slide 1"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default bpk-page-indicator__indicator--active-default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 2"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 3"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 4"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 5"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 6"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 7"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPageIndicator should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="custom-classname"
  >
    <div
      class="bpk-page-indicator"
    >
      <div
        class="bpk-page-indicator__container"
      >
        <div
          class="bpk-page-indicator__indicators-container"
        >
          <button
            aria-current="true"
            aria-label="Go to slide 1"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default bpk-page-indicator__indicator--active-default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 2"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 3"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 4"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 5"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 6"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 7"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPageIndicator should support showNav attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-page-indicator bpk-page-indicator__showNav"
    >
      <button
        aria-label="Previous slide"
        class="bpk-button bpk-button--icon-only bpk-button--link"
        disabled=""
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-icon--rtl-support"
            height="24"
            style="width: 1.5rem; height: 1.5rem;"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.207 4.299a1 1 0 010 1.414l-6.293 6.293 6.293 6.293a1 1 0 01-1.414 1.414l-7-7a1 1 0 010-1.414l7-7a1 1 0 011.414 0z"
            />
          </svg>
        </span>
      </button>
      <div
        class="bpk-page-indicator__container"
      >
        <div
          class="bpk-page-indicator__indicators-container"
        >
          <button
            aria-current="true"
            aria-label="Go to slide 1"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default bpk-page-indicator__indicator--active-default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 2"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 3"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 4"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 5"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 6"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 7"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--default"
            type="button"
          />
        </div>
      </div>
      <button
        aria-label="Next slide"
        class="bpk-button bpk-button--icon-only bpk-button--link"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-icon--rtl-support"
            height="24"
            style="width: 1.5rem; height: 1.5rem;"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.8 4.287a1 1 0 000 1.414l6.292 6.293L7.8 18.287a1 1 0 001.39 1.438l.024-.024 7-7a1 1 0 000-1.414l-7-7a1 1 0 00-1.414 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkPageIndicator should support style attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bpk-page-indicator"
    >
      <div
        class="bpk-page-indicator__container"
      >
        <div
          class="bpk-page-indicator__indicators-container"
        >
          <button
            aria-current="true"
            aria-label="Go to slide 1"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage bpk-page-indicator__indicator--active-overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 2"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 3"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 4"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 5"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 6"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
          <button
            aria-current="false"
            aria-label="Go to slide 7"
            class="bpk-page-indicator__indicator bpk-page-indicator__indicator--overImage"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
